solve swiper declaration type

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      name="description"
+      content="Scapewalkers Limited is aimed at providing servicesin all building construction projects ramification, architecture, landscape architectue, interior design, engineering and project construction "
+    />
+    <!-- <meta property="og:title" content="Scapewalkers" />
+    <meta property="og:description" content="hello" /> -->
+
+    <meta
+      name="keywords"
+      content="Architecture, construction, landscape, landscape architecture, interior design, project construction"
+    />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
+    <link rel="icon" href="/src/assets//images/png/scapewalkers-logo.png" />
+    <title>Scapewalkers</title>
   </head>
   <body>
+    <noscript>>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
