--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="English" />
     <link rel="icon" href="/src/assets//images/png/scapewalkers-logo.png" />
+    <link href="https://api.fontshare.com/v2/css?f[]=clash-display@200,300,400,500,600,700&display=swap" rel="stylesheet">
     <title>Scapewalkers</title>
+
   </head>
   <body>
     <noscript>>You need to enable JavaScript to run this app.</noscript>
